@@ -1,3 +1,9 @@
+2010-06-30	The InnoDB Team
+
+	* btr/btr0sea.c, ha/ha0ha.c, handler/ha_innodb.cc, include/btr0sea.h:
+	Fix Bug#54311 Crash on CHECK PARTITION after concurrent LOAD DATA
+	and adaptive_hash_index=OFF
+
 2010-06-29	The InnoDB Team
 	* row/row0row.c, row/row0undo.c, row/row0upd.c:
 	Fix Bug#54408 txn rollback after recovery: row0umod.c:673
